--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,14 +20,13 @@ if(WIN32)
     get_win_ver(WINDOWS_VERSION)
 endif()
 
-set(SOURCES
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
+# Libraries
+set(LIB_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/websocket-client.cpp"
 )
-
-add_executable(network-monitor ${SOURCES})
+add_library(network-monitor STATIC ${LIB_SOURCES})
 target_compile_features(network-monitor
-    PRIVATE
+    PUBLIC
         cxx_std_14
 )
 target_compile_definitions(network-monitor
@@ -35,12 +34,26 @@ target_compile_definitions(network-monitor
         $<$<PLATFORM_ID:Windows>:_WIN32_WINNT=${WINDOWS_VERSION}>
 )
 target_link_libraries(network-monitor
-    PRIVATE
+    PUBLIC
         Boost::Boost
 )
-
 # Tell CMake to look for header files in these directories
 target_include_directories(network-monitor
+    PUBLIC
+        inc/network-monitor
+)
+
+# Tests
+set(TESTS_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client.cpp"
+)
+add_executable(network-monitor-tests ${TESTS_SOURCES})
+target_compile_features(network-monitor-tests
     PRIVATE
-        src
+        cxx_std_14
+)
+target_link_libraries(network-monitor-tests
+    PRIVATE
+        network-monitor
+        Boost::Boost
 )
