--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ target_compile_definitions(network-monitor-tests
         $<$<PLATFORM_ID:Windows>:_WIN32_WINNT=${WINDOWS_VERSION}>
         TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
         TEST_NETWORK_LAYOUT="${CMAKE_CURRENT_SOURCE_DIR}/tests/network-layout.json"
+        TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/tests/test-data"
 )
 target_link_libraries(network-monitor-tests
     PRIVATE
