Extract get env function to a separate class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 
 # Static Libraries
 set(LIB_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/env.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/file-downloader.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/stomp-client.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/transport-network.cpp"
